# CMAKE

./: CMakeLists.txt  main.cpp
test_lib/: operations.cpp  operations.hpp
test_lib_submodule/: CMakeLists.txt  operations.cpp  operations.hpp
